@@ -1,3 +1,10 @@
+Thu Mar 31 13:55:25 2005  Nick Burrett  <nick@sqrt.co.uk>
+
+	* sched.h (sched_yield): Add prototype.
+	* sched/syield.c: New file.
+
+	* Makefile.in (CROSS_CFLAGS): Set compiler to the C99 standard.
+
 Thu Mar 31 13:50:43 2005  Nick Burrett  <nick@sqrt.co.uk>
 
 	* setlocale.c (setlocale): Only build ctype tables when they
